tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__2Nitrochlorobenz-AAAAAAAAAAAAAAAAAAAGnQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1693,
  "prerequisites": [
    1691,
    1692
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Next step is to mix the nitration mixture with your chlorobenzene in the HV chemical reactor to get 2-nitrochlorobenzene.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§l2-Nitrochlorobenzene",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    1691,
    1692
  ],
  "rewards": [],
  "tasks": []
}
