tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__33Dichlorobenzid-AAAAAAAAAAAAAAAAAAAGng==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1694,
  "prerequisites": [
    1693
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Mixing 2-nitrochlorobenzene with copper dust gives you 3,3 Dichlorobenzidine in an EV Chemical Reactor.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§l3,3 Dichlorobenzidine",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    1693
  ],
  "rewards": [],
  "tasks": []
}
