tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__ASmallRewardTheI-n22vWzZHSu6Gn63EBV1FUw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3911177187547235667,
  "prerequisites": [
    2321,
    2878
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Congratulations! You have completed the Platinum Line. Not many players have the perseverance to accomplish this task. A small reward is in order!\n\nThe [note]Infinite Spray Can[/note] never runs out of paint, and contains all sixteen colors (as well as solvent!) Of course, line mode and Ring of Loki support are included. There are also many convenience features. Middle-click to open a color choice GUI. Middle-click a painted block to copy its color to the spray can. Left-click to cycle the active color (sneak to go backwards.) Sneak-middle-click to lock the can; while locked, you can't accidentally change the color. Sneak-middle-click to unlock.\n\nNaturally, you'll have to craft the infinite spray can yourself. It's a Dire Crafting recipe, so hopefully you have a dire crafting table. It requires a lot of platinum line materials, of course. And, apparently, a rainbow cactus, so a small detour into magic will be necessary. And a bunch of random-looking AE2 parts. And an IV world accelerator. And... a fence?\n\nIs this really a reward?",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lA Small Reward: The Infinite Spray Can",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2321,
    2878
  ],
  "rewards": [],
  "tasks": []
}
