tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__ASoCAdvancedSyst-AAAAAAAAAAAAAAAAAAAGlQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1685,
  "prerequisites": [
    1671,
    1407
  ],
  "properties": {
    "auto_claim": false,
    "desc": "ASoCs. Advanced system on a chip, will be used for a new multiblock, the Precise Assembler.\n\nAnd just like SoCs, ASoCs will be used to make cheaper HV and EV circuits.\n\nHowever you'll need to wait until ZPM to make the cheaper EV circuits.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lASoC - Advanced System on a Chip",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1671,
    1407
  ],
  "rewards": [],
  "tasks": []
}
