tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__ButThisisExpensi-AAAAAAAAAAAAAAAAAAAJEw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2323,
  "prerequisites": [
    2322
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Gathering Zinc might not have been a pleasant task in the past, but here, it's just used as a catalyst, so you will regain all of it.\n\nWhen you electrolyze the Zinc Sulfate, you get a Sulfur and 4000L Oxygen back too.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lBut... This is Expensive!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    2322
  ],
  "rewards": [],
  "tasks": []
}
